src/objects/Feedback__c.object
<CustomObject>
    <fields>
        <fullName>Answer_1__c</fullName>
        <label>Answer</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Expert_Reviewer_Form__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Expert Reviewer Form</label>
        <referenceTo>Expert_Reviewer_Form__c</referenceTo>
        <relationshipLabel>Feedback</relationshipLabel>
        <relationshipName>Feedback</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>NOFO_Group__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>NOFO Group</label>
        <referenceTo>NOFA_Group__c</referenceTo>
        <relationshipLabel>Feedback</relationshipLabel>
        <relationshipName>Feedback</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Question_1__c</fullName>
        <formula>Setup_Questionnaire__r.Question_1__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Question</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Save_the_Date__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Save the Date</label>
        <referenceTo>Save_the_Date__c</referenceTo>
        <relationshipLabel>Feedback</relationshipLabel>
        <relationshipName>Feedback</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Score__c</fullName>
        <label>Score</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Setup_Questionnaire__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Setup Questionnaire</label>
        <referenceTo>Setup_Questionnaire__c</referenceTo>
        <relationshipLabel>Feedback</relationshipLabel>
        <relationshipName>Feedback</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Feedback</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>F-{0000}</displayFormat>
        <label>Feedback Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Feedback</pluralLabel>
    <recordTypes>
        <fullName>Setup_Questionnaire</fullName>
        <active>true</active>
        <label>Setup Questionnaire</label>
    </recordTypes>
    <recordTypes>
        <fullName>Vetting_Questions</fullName>
        <active>true</active>
        <label>Vetting Questions</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>